# fehem

./: .env.docker.example  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/skills/: README.md
.github/skills/brutalist-skill/: SKILL.md
.github/skills/minimalist-skill/: SKILL.md
.github/skills/output-skill/: SKILL.md
.github/skills/redesign-skill/: SKILL.md
.github/skills/soft-skill/: SKILL.md
.github/skills/stitch-skill/: DESIGN.md  SKILL.md
.github/skills/taste-skill/: SKILL.md
.sisyphus/drafts/: fehem-full-platform.md
.sisyphus/plans/: fehem-full-platform.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/app/: ai_routes.py  ai_schemas.py  config.py  db.py  main.py  nvidia_ai.py  semantic_search.py
backend/tests/: test_ai_api.py  test_api.py
docs/: AI_ARCHITECTURE.md  PRODUCT_RULES.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  components.json  package.json
frontend/app/: page.tsx
frontend/components/: backend-connection-check.tsx
frontend/scripts/: test-ai-bridge.ts  test-backend-connection.ts  test-semantic-search.ts
